--- a/WeBuyForYou/AndroidManifest.xml
+++ b/WeBuyForYou/AndroidManifest.xml
@@ -11,10 +11,9 @@
     <uses-permission android:name="android.permission.READ_CALENDAR"/>
     
     <application
-        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.Sherlock" >
         <activity
             android:name="com.webuyforyou.webuyforyou.MainActivity"
             android:label="@string/app_name" >
@@ -23,6 +22,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity 
+            android:name="com.webuyforyou.webuyforyou.Preference">
+            
         </activity>
     </application>
 
