--- a/WeBuyForYou/AndroidManifest.xml
+++ b/WeBuyForYou/AndroidManifest.xml
@@ -25,8 +25,9 @@
         </activity>
         <activity 
             android:name="com.webuyforyou.webuyforyou.Preference">
-            
         </activity>
+        <activity
+            android:name="com.webuyforyou.webuyforyou.ProfileScreen"/>
     </application>
 
 </manifest>
