Added favorite items and updated the setting.

--- a/WeBuyForYou/AndroidManifest.xml
+++ b/WeBuyForYou/AndroidManifest.xml
@@ -72,6 +72,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.webuyforyou.activity.MainActivity" />
         </activity>
+        
+        <activity
+            android:name="com.webuyforyou.activity.FavoritesActivity"
+            android:label="@string/title_favorites"
+            android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.webuyforyou.activity.MainActivity" />
+        </activity>
 
         <service android:name="com.webuyforyou.alarm.AlarmService" >
         </service>
