--- a/WeBuyForYou/project.properties
+++ b/WeBuyForYou/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../../Workspace/Telenor-Workspace/android-support-v7-appcompat
+android.library.reference.1=../../appcompat_v7_4
