--- a/WeBuyForYou/AndroidManifest.xml
+++ b/WeBuyForYou/AndroidManifest.xml
@@ -9,14 +9,19 @@
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name="com.webuyforyou.BaseApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Birthday" >
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
         <activity
             android:name="com.webuyforyou.activity.SplashActivity"
             android:label="@string/app_name"
@@ -72,7 +77,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.webuyforyou.activity.MainActivity" />
         </activity>
-        
         <activity
             android:name="com.webuyforyou.activity.FavoritesActivity"
             android:label="@string/title_favorites"
@@ -81,6 +85,34 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.webuyforyou.activity.MainActivity" />
         </activity>
+        <activity
+            android:name="com.webuyforyou.activity.ImportBirthdayActivity"
+            android:label="@string/title_import_birthday"
+            android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.webuyforyou.activity.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.webuyforyou.activity.FriendPickerSampleActivity"
+            android:label="@string/title_import_birthday"
+            android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.webuyforyou.activity.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.webuyforyou.activity.PickFriendsActivity"
+            android:label="Friends"
+            android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.webuyforyou.activity.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <service android:name="com.webuyforyou.alarm.AlarmService" >
         </service>
