--- a/WeBuyForYou/project.properties
+++ b/WeBuyForYou/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=..\\..\\..\\Workspace\\Telenor-Workspace\\android-support-v7-appcompat
-android.library.reference.2=../../../Facebook-Login/facebook-android-sdk-3.19.1/facebook-android-sdk-3.19.1/facebook
+android.library.reference.1=../facebook
+android.library.reference.2=../../git/appcompat_v7_4
