--- a/WeBuyForYou/AndroidManifest.xml
+++ b/WeBuyForYou/AndroidManifest.xml
@@ -12,7 +12,8 @@
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    
     <application
         android:name="com.webuyforyou.BaseApplication"
         android:icon="@drawable/ic_launcher"
